# group-project-medallion-fund

./: Assets.csv  CMakeLists.txt  DataGeneration.ipynb  Plotting.ipynb  README.md  Strategy_Output.csv  testing_markowitz.ipynb
.ipynb_checkpoints/: DataGeneration-checkpoint.ipynb  Plotting-checkpoint.ipynb
src/: fileio.cpp  fileio.hpp  fileread.cpp  fileread.hpp  general_agent.cpp  general_agent.hpp  main.cpp  matrix.cpp  matrix.hpp  specialised_agents.cpp  specialised_agents.hpp
tests/: CMakeLists.txt  general_test.cpp  matrix_test.cpp  test_markowitz.cpp
