add_executable(markowitz ${SRC_FILES} test_markowitz.cpp)
add_executable(general_tests ${SRC_FILES} general_test.cpp)
add_executable(matrix_tests ${SRC_FILES} matrix_test.cpp)
target_include_directories(markowitz PUBLIC ${CMAKE_SOURCE_DIR}/extern/catch2 ${CMAKE_SOURCE_DIR}/src)
target_include_directories(general_tests PUBLIC ${CMAKE_SOURCE_DIR}/extern/catch2 ${CMAKE_SOURCE_DIR}/src)
target_include_directories(matrix_tests PUBLIC ${CMAKE_SOURCE_DIR}/extern/catch2 ${CMAKE_SOURCE_DIR}/src)
add_test(NAME markowitz COMMAND markowitz)
add_test(NAME general_tests COMMAND general_tests)
add_test(NAME matrix_tests COMMAND matrix_tests)